--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
   <%end%>
 </p>
 <p>
-  <% if @post.user_id == current_user.id  %>
+  <% if current_user != nil and @post.user_id == current_user.id  %>
     <%= link_to 'Edit', edit_post_path(@post) %> |
     <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?'} %>
   <% end %>
