--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,6 @@
          <div class="navbar-header">
            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
              <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
            </button>
            <div class="navbar-brand shtcder-brand">Shtcder!</div>
          </div>
@@ -42,11 +39,11 @@
               <% end %>
            </ul>
            <ul class="nav navbar-nav navbar-right">
-             <li class="notice">
-               <%= notice %>
+             <li class="navbar-text notice">
+               <i><%= notice %></i>
              </li>
-             <li class="alert">
-               <%= alert %>
+             <li class="navbar-text alert">
+               <i><%= alert %></i>
              </li>
              <% if user_signed_in? %>
 
@@ -58,8 +55,11 @@
               </li>
               <% else %>
                <li>
-                 <%= link_to 'Sign In!', new_user_session_path %>
-             </li>
+                 <%= link_to 'Sign In', new_user_session_path %>
+               </li>
+               <li>
+                 <%= link_to 'Sign Up', new_user_registration_path %>
+               </li>
              <% end %>
            </ul>
          </div><!--/.nav-collapse -->
