paging for user's posts; :per_page => 10

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,22 +4,11 @@
   <%= @profile.created_at.strftime("%Y-%m-%d")%></i>
 </p>
 <b><%= @profile.username %> posts:</b>
-<p>
-  <% @posts.each do |c|%>
-  <p>
-    <b><%= c.title %></b> (<%= c.lang%>)
-    <% if current_user != nil and c.user_id == current_user.id  %>
-      <%= link_to 'Edit', edit_post_path(c) %> |
-      <%= link_to 'Delete', post_path(c), method: :delete, data: { confirm: 'Are you sure?'} %>
-    <% end %>
-    <% if c.lang == 'None' %>
-      <pre><code class="nohighlight"><%= c.text %></code></pre>
-    <% elsif c.lang == 'Other'%>
-      <pre><code><%= c.text %></code></pre>
-    <%else%>
-      <pre><code class="<%= c.lang.downcase%>"><%= c.text %></code></pre>
-    <%end%>
-  </p>
-  <hr>
-  <% end%>
+<div id="my-posts">
+  <%= render @posts %>
+</div>
+
+<div id="infinite-scrolling">
+  <%= will_paginate @posts %>
+</div>
 </p>
