--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,20 +21,22 @@
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-static-top">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
        <div class="container">
          <div class="navbar-header">
-           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
              <span class="sr-only">Toggle navigation</span>
            </button>
-           <div class="navbar-brand shtcder-brand">Shtcder!</div>
+           <%= link_to 'Shtcder!', root_path, :class => "navbar-brand shtcder-brand" %>
          </div>
-         <div id="navbar" class="navbar-collapse collapse">
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
            <ul class="nav navbar-nav">
              <li><%= link_to 'New Shtcd', new_post_path %></li>
-             <li class="active"><%= link_to 'View All Shtcds', posts_path %></li>
+             <li><%= link_to 'View All Shtcds', posts_path %></li>
               <%= form_tag(posts_path, :class => "navbar-form navbar-left", :method => "get", id: "search-form") do %>
-                <%= text_field_tag :search, params[:search], :class => "form-control", placeholder: "Search" %>
+                <div class="form-group">
+                  <%= text_field_tag :search, params[:search], :class => "form-control", placeholder: "Search" %>
+                </div>  
                 <%= submit_tag "Search", :class => "btn btn-primary btn-sm" %>
               <% end %>
            </ul>
